--- a/Bulky/Views/_ViewImports.cshtml
+++ b/Bulky/Views/_ViewImports.cshtml
@@ -1,3 +1,1 @@
-﻿@using Bulky
-@using Bulky.Models
-@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
